# emailagent

./: .gitignore  PROJECT_INTRO.md  README.md  ROADMAP.md  ROADMAP_TREND.md  api_response.json  dev.md  docker-compose.yml  kombai-accessibility-audit-2026-01-15-06-53.md  main.py  pyproject.toml
backend/: DEPLOYMENT.md  Dockerfile  README.md  main.py  pyproject.toml
backend/api/: Dockerfile  __init__.py  database.py  main.py  models.py  schemas.py
backend/api/routers/: archives.py
backend/config/: discovery_subreddits.json  discovery_twitter_queries.json  discovery_youtube_queries.json  langsmith.py  sender_whitelist.json  settings.py  youtube_channels.json
backend/db/: __init__.py
backend/doc/: errors.md  llms.txt  reddit.md  tools.md
backend/gmail/: client.py
backend/processor/: briefing.py  discovery_graph.py  graph.py  nodes.py  prompts.py  states.py  visualize_graph.py
backend/processor/email/: graph.py  nodes.py  prompts.py  states.py
backend/processor/google_trend/: graph.py  trend_validation.py
backend/processor/hacker_news/: graph.py
backend/processor/product_hunt/: graph.py
backend/processor/viral_app/: __init__.py  clusterer.py  graph.py  llm_filter.py  models.py  pain_point_extractor.py  ranker.py  scorer.py
backend/scripts/: authorize_arcade.py  crontab  wake_macos.sh
backend/sources/: __init__.py  arcade_client.py  email_delivery.py  google_trends.py  hacker_news.py  models.py  product_hunt.py  validation_service.py  youtube.py
backend/sources/gmail/: auth.py  (+1 more)
backend/utils/: callbacks.py  database.py  html_parser.py  logger.py
(+67 files in other folders)
